fixed padding issue for pagination on iphone

--- a/src/sass/_vuetify-overrides.scss
+++ b/src/sass/_vuetify-overrides.scss
@@ -10,7 +10,6 @@ html {
 .v-application {
   font-family: $base-font-family !important;
   background-color: $bg-gray !important;
-
   .v-pagination {
     justify-content: flex-end;
     button {
@@ -18,6 +17,9 @@ html {
       border: 1px solid $bg-gray;
       height: auto;
       padding: 1px 4px;
+    }
+    @media only screen and (max-width:400px) {
+      margin-left:10px;
     }
   }
 
